# star-proof

./: README.md
star-model_problem/: README.md
star-model_problem/cmake/: CMakeLists.txt
star-model_problem/src/: CMakeCache.txt  model_problem.c  model_problem_realization.c  model_problem_realization.h  s4vs.c  s4vs_realization.c  s4vs_realization.h
